Show the stars for the rating with the correct full size in the OSD. Thanks Tuomas :)

BUG: 147059

svn path=/branches/stable/extragear/multimedia/amarok/; revision=679991